# meldeapp-server/api/swagger.yaml
@@ -253,6 +253,36 @@ paths:
           schema:
             $ref: "#/definitions/Error"
       x-swagger-router-controller: "User"
+  /login:
+    post:
+      tags:
+      - "User"
+      operationId: "loginPOST"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        required: true
+        schema:
+          $ref: "#/definitions/LoginRequest"
+      responses:
+        200:
+          description: "The new user"
+          schema:
+            $ref: "#/definitions/User"
+        401:
+          description: "Unauthorized"
+          schema:
+            $ref: "#/definitions/Error"
+        default:
+          description: "Unexpected error"
+          schema:
+            $ref: "#/definitions/Error"
+      x-swagger-router-controller: "User"
+
 definitions:
   User:
     type: "object"
@@ -292,6 +322,15 @@ definitions:
       name:
         type: "string"
         description: "Name of the user."
+      email:
+        type: "string"
+        description: "Email address of the user"
+      password:
+        type: "string"
+        format: "password"
+  LoginRequest:
+    type: "object"
+    properties:
       email:
         type: "string"
         description: "Email address of the user"
